sites/all/themes/openscholar/scholar_base/css/scholar-base.css
body {
  background: #FFF;
  }
  
ul li {
	margin-left: 20px;
}

 /* Firebug bug */

body.admin-menu {
  position:static !important;
  }

#tinymce {
  background: #fff !important;
  min-width: 0 !important;
  margin: 5px !important;
  }

.admin-menu div#admin-toolbar.vertical {
  top:20px;
  }

.flL {
  float:left;
  margin: 0 1.5em .5em 0;
  }

.flR {
  float: right;
  margin: 0 0 .5em 1.5em;
  }

/* IMAGES */

img {
  border:none;
  }

.img-flL {
  float: left;
  margin: 0 1em .9em 0;
  }

.img-flR {
  float: right;
  margin: 0 0 .9em 1em;
  }

.img-center {
  margin: 1.5em auto;
  text-align: center;
  }

#scholar-shield {
  width: 75px;
  margin: 0 auto;
  text-align: center;
  }

#scholar-shield img,
#logo img {
  /* themers can change the size of the shields and logo without uploading new images */
  max-width: 100%;
  }

/* TOP OPENSCHOLAR ADMIN BAR */

.cp-toolbar-full #top {
  height: 42px;
  background:url('../images/top-bottom-bg.png') repeat-x #000 0 -9px;
  position:relative;
  z-index: 996;
  }

.cp-toolbar-mini #top {
  height: 20px;
  padding: 0;
  line-height: normal;
  background: transparent;
  left: auto;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  }

/* Remove when .mini class is added to #top, rather than body */

.admin-menu.cp-toolbar-mini #top {
  top: 22px;
  }

.cp-toolbar-mini #top ul.links {
  background: url('../images/toolbar-mini-tab.png') no-repeat 0 0;
  height: 22px;
  z-index:100;
  padding-right: 6px;
  }

/* LAYOUT */

/* The following is the scheme for flexible one, two, or three column layouts
  Read more about this method at http://www.alistapart.com/articles/holygrail/
*/

.column {
  float: left;
  position: relative;
  padding: 10px;
  }

#header-left,
#header-right,
#sidebar-first,
#sidebar-second {
  width: 200px;
  }

.hg-container {
  padding-left: 220px; /* left width incl. padding */
  padding-right: 240px; /*right width incl. padding plus center padding */
  }

#content-main,
#header-main {
  width: 100%;
  }

#content-main {
  min-height: 330px;
  }

body.no-sidebars #content-main,
body.header-main #header-main {
  width: auto;
  float:none;
  }

#header-left,
#sidebar-first {
  left: -240px; /* left width incl. padding plus center padding */
  margin-left: -100%;
  }

#header-right,
#sidebar-second {
  margin-right: -100%;
  }

body.sidebar-second #content-area .hg-container,
body.header-main #header .hg-container,
body.header-main-right #header .hg-container {
   padding-left: 0;
   }

body.sidebar-first #content-area .hg-container,
body.header-left-main #header .hg-container {
  padding-right: 40px; /* Only the padding of center div */
  }

body.no-sidebars #content-area .hg-container {
  padding: 0;
  }

body.header-left-main #header .hg-container {
  padding-right: 20px; /* Only the padding of header main */
  }

body.header-left-right #header .hg-container,
body.header-main #header .hg-container,
body.header-right #header .hg-container,
body.header-left #header .hg-container{
  padding: 0;
  }

body.header-left-right #header-left,
body.header-left-right #header-right,
body.header-left #header-left,
body.header-right #header-right {
  width: 45%;
  right: auto;
  }

body.header-left-right #header-left,
body.header-left-right #header-right {
  margin:0;
  }

body.header-left-right #header-right {
  float:right;
  }

#sidebar-first .block,
#sidebar-second .block {
  margin-bottom: 1.5em;
  clear:both;
  }

#navbar {
  padding: 5px;
  }

#header,
#navbar,
#content-area,
#footer {
  clear:both;
  }

/* FOOTER */

#footer {
  padding: 10px 0;
  }

#footer .block,
#footer-message {
  display:inline;
  }
  
#content-bottom {
	clear: both;
}

/* NODE */

.node, .biblio-entry {
  padding-top: .5em;
  padding-bottom: 0.938em;
  margin-bottom: 1.875em;
  padding-left:0.188em;
  padding-right:0.188em;
  clear:both;
  position: relative;
  }

.node-unpublished {
  background-color:#feffcd;
  padding: 4px;
  }

div.unpublished {
  font-weight: bold;
  color: #adaf01;
  }

.node-type-link {
  margin-bottom: 0;
  }

div.terms {
  clear: left !important;
  }

.teaser-extra {
  margin-left: 1em;
  }

.node-teaser {
  position: relative;
  }

/* VIEWS */

.views-row {
  margin-bottom: 1em;
  clear:both;
  }

/* CLEAR FIX */

/* As some Drupal themers use clear-block, we add both classes */

.clearfix:after,
.clear-block:after {
  content: ".";
	display: block;
	clear: both;
	visibility: hidden;
	line-height: 0;
	height: 0;
  }

.clearfix,.clear-block {
	display: inline-block;
  }

html[xmlns] .clearfix, html[xmlns] .clear-block {
	display: block;
  }

